# AI-BI-Dashboard

backend/: .env.sample  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  llm_service.py  main.py  models.py  schema_utils.py
backend/scripts/: seed_database.py
frontend/: .env.sample  .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DynamicChart.tsx  SearchBar.tsx
frontend/src/lib/: api.ts
